2021/manifests/python-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: python
  name: python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python
  strategy: {}
  template: 
    metadata:
      creationTimestamp: null
      labels:
        app: python
    spec:
      containers:
        - image: yoichi00/container-ren:python-test
          name: python
          resources: {}
status: {}
