2021/manifests/python-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: python
  name: python
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: python
  type: NodePort
status:
  loadBalancer: {}
