2021/manifests/python-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: python
spec:
  rules:
    - host: chat.192.168.99.110.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: python
              servicePort: 80
